Fix layout on small screens

--- a/app/css/shop.scss
+++ b/app/css/shop.scss
@@ -102,14 +102,7 @@ header {
   }
 }
 
-// helpers and UI elements theme
-
-.tac {
-  text-align: center;
-}
-.tar {
-  text-align: right;
-}
+// UI elements theme
 
 .btn {
   padding: 0.4em 0.8em;
