--- a/public/shop.bundle.css
+++ b/public/shop.bundle.css
@@ -1899,12 +1899,6 @@ header {
   .cart-box {
     position: relative; } }
 
-.tac {
-  text-align: center; }
-
-.tar {
-  text-align: right; }
-
 .btn {
   padding: 0.4em 0.8em;
   line-height: 1.4;
